--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,6 +1,5 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
     padding: 4px;
     margin: 4px;
 }
@@ -75,10 +74,11 @@ header ul li {
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
-    margin: 0 auto 35px auto;
-    width: 80%;
+    margin: auto;
+    width: 100%;
     background-color: lightblue;
-  }
+    
+}
 
 .bio p {
     line-height: 1;
@@ -91,37 +91,37 @@ header ul li {
 /* End of About Me Section */
 
 /* Start of Website Section */
-.projects {
+.project {
     display: flex;
-}
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
 
-.web {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+.project div {
+      display: flex;
+      flex-direction: column;
 }
-
-.project > div {
-  margin: 1px;
-  padding: 2px;
-  font-size: 15px;
-  
-}
-
 .project h3 {
+    font-size: 18px;
     text-align: center;
-}
-
-.project-text {
- font-size: 25px;
 }
 
 .project-img img {
     height: 200px;
     width: 200px;
-    display: inline-block;
-    align-items: center;
+    box-shadow: 10px 5px 5px black;
 }
+
+.project-img:hover,
+.project-img:focus
+.project-img:active {
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 /* End of the Website Section */
 
 /* Start of the Resume Section */
@@ -129,4 +129,71 @@ header ul li {
     height: 500px;
     width: 100%;
     align-items: center;
+}
+
+/* End of Resume section */
+
+/* Start of the Contact Section */
+.info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+.info div {
+      display: flex;
+      flex-direction: column;
+}
+.info-img img {
+    height: 80px;
+    width: 80px;
+    box-shadow: 10px 5px 5px black;
+}
+
+.info h3 {
+    font-size: 18px;
+    text-align: center;
+}
+.info-img:hover,
+.info-img:focus
+.info-img:active {
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.info-text div {
+    background-color: yellow;
+  padding: 20px;
+  display: none;
+}
+.info-text span:hover + div {
+    display: block;
+}
+/* End of Contact Section */
+
+/*Start of the Footer Section */
+footer {
+    width: 100%;
+    padding: 30px 25px;
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+}
+
+footer h2 {
+    font-size: 20px;
+    margin: 0;
+   
+}
+
+footer div {
+    line-height: 1.5;
+    font-size: 17px;
+}
+
+footer a {
+    color: blue;
 }
