--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -77,7 +77,6 @@ header ul li {
     margin: auto;
     width: 100%;
     background-color: lightblue;
-    
 }
 
 .bio p {
@@ -87,6 +86,7 @@ header ul li {
     font-size: x-large;
     margin: 0 auto;
     text-align: center;
+    padding: 60px;
 }
 /* End of About Me Section */
 
@@ -97,6 +97,7 @@ header ul li {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    padding: 60px;
   }
 
 .project div {
@@ -126,7 +127,7 @@ header ul li {
 
 /* Start of the Resume Section */
 .pdf iframe {
-    height: 500px;
+    height: 1000px;
     width: 100%;
     align-items: center;
 }
@@ -140,11 +141,12 @@ header ul li {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-  }
+    padding: 60px;
+}
 
-.info div {
-      display: flex;
-      flex-direction: column;
+  .info div {
+    display: flex;
+    flex-direction: column;
 }
 .info-img img {
     height: 80px;
@@ -153,25 +155,17 @@ header ul li {
 }
 
 .info h3 {
-    font-size: 18px;
-    text-align: center;
+   font-size: 18px;
+   text-align: center;
 }
-.info-img:hover,
-.info-img:focus
-.info-img:active {
+
+.info-img img:hover,
+.info-img img:focus
+.info-img img:active {
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
-}
 
-.info-text div {
-    background-color: yellow;
-  padding: 20px;
-  display: none;
-}
-.info-text span:hover + div {
-    display: block;
-}
 /* End of Contact Section */
 
 /*Start of the Footer Section */
@@ -179,89 +173,17 @@ footer {
     width: 100%;
 }    
 
-footer h2 {
+footer h4 {
     font-size: 20px;
     margin: 0;
    
 }
 
 footer div {
-    line-height: 1.5;
+    line-height: 0.5;
     font-size: 17px;
 }
 
 footer a {
     color: blue;
 }
-
-
-/* MEDIA QUERY FOR 980 screens */
-@media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-        position: relative;
-      }
-    
-      header h1 {
-        width: 100%;
-        text-align: center;
-      }
-    
-      header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-      }
-    
-      header nav ul li a {
-        font-size: 20px;
-      }
-    
-      footer h2, footer div {
-        text-align: center;
-        width: 100%;
-      }
-    }
-
-    /* MEDIA QUERY FOR 768 screens */
-    @media screen and (max-width: 768px) {
-        section {
-          padding: 30px 15px;
-        }
-        .project h3 {
-            flex: 1 100%;
-            text-align: center;
-          }
-        
-         .project-img {
-            flex: 0 32%;
-            margin-right: 0;
-            margin-top: 15px;
-            margin-bottom: 15px;
-          }
-        
-          .step-text {
-            flex: 100%;  
-          }
-        
-        }
-
-        /* MEDIA QUERY FOR 575 screens */
-        @media screen and (max-width: 575px) {
-
-          .intro p {
-              width: 100%;
-            }
-          
-            .projects {
-              flex: 0 100%;
-            }
-          
-            .info {
-              text-align: center;
-            }
-          
-            .info > * {
-              flex: 0 100%;
-            }
